--- a/sandbox/green_ppa/green_ppa_deep_hedging_experiments.ipynb
+++ b/sandbox/green_ppa/green_ppa_deep_hedging_experiments.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-22T11:26:47.890843Z",
@@ -28,14 +28,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
     }
    ],
    "source": [
@@ -50,13 +42,15 @@
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"-1\"\n",
     "from rivapy.tools.datetime_grid import DateTimeGrid\n",
     "\n",
-    "from rivapy.models.residual_demand_fwd_model import WindPowerForecastModel, MultiRegionWindForecastModel, ResidualDemandForwardModel, LinearDemandForwardModel\n",
+    "from rivapy.models.residual_demand_fwd_model import WindPowerForecastModel, MultiRegionWindForecastModel, LinearDemandForwardModel\n",
     "from rivapy.instruments.ppa_specification import GreenPPASpecification\n",
     "from rivapy.models.residual_demand_model import SmoothstepSupplyCurve\n",
     "from rivapy.models import OrnsteinUhlenbeck\n",
     "from rivapy.pricing.green_ppa_pricing import GreenPPADeepHedgingPricer, DeepHedgeModel\n",
     "import numpy as np\n",
     "from scipy.special import comb\n",
+    "\n",
+    "import analysis\n",
     "\n",
     "from IPython.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:80% !important; }</style>\"))\n",
@@ -80,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-22T11:28:39.106267Z",
@@ -96,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-22T12:10:15.492636Z",
@@ -127,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-22T11:30:46.171333Z",
@@ -137,8 +131,8 @@
    "outputs": [],
    "source": [
     "np.random.seed(42)\n",
-    "rnd = np.random.normal(size=rd_model.rnd_shape(n_sims=10_000, n_timesteps=timegrid.shape[0]))\n",
-    "model_result = ld_model.simulate(timegrid, rnd, expiries=forward_expiries, \n",
+    "rnd = np.random.normal(size=model.rnd_shape(n_sims=10_000, n_timesteps=timegrid.shape[0]))\n",
+    "model_result = model.simulate(timegrid, rnd, expiries=forward_expiries, \n",
     "                                 initial_forecasts={'Onshore': [0.8],\n",
     "                                                          'Offshore': [0.6]},\n",
     "                                power_fwd_prices = [100])"
@@ -146,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-22T11:30:54.732056Z",
@@ -160,7 +154,7 @@
        "{'Offshore_FWD0', 'Onshore_FWD0', 'Power_Germany_FWD0', 'Wind_Germany_FWD0'}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,56 +167,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PPA Hedging"
+    "# Experiments"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-06-22T13:22:31.326605Z",
-     "start_time": "2023-06-22T13:22:30.440367Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class Repo:\n",
-    "    def __init__(self, repo_dir):\n",
-    "        self.repo_dir = repo_dir\n",
-    "        self.results = {}\n",
-    "        with open(repo_dir+'/hedge_results.json','r') as f:\n",
-    "            self.results = json.load(f)\n",
-    "            \n",
-    "    def run_hedge_experiment(self, val_date, ppa_spec, model, **kwargs):\n",
-    "        params = {}\n",
-    "        params['ppa_spec'] = ppa_spec.to_dict()\n",
-    "        params['ppa_spec_hash'] = ppa_spec.hash()\n",
-    "        params['model'] = model.to_dict()\n",
-    "        params['model_hash'] = model.hash()\n",
-    "        params['pricing_param'] = kwargs\n",
-    "        hash_key = FactoryObject.hash_for_dict(params)\n",
-    "        #if hash_key in results:\n",
-    "        \n",
-    "        pricing_result =  GreenPPADeepHedgingPricer.price(val_date, \n",
-    "                                      ppa_spec, \n",
-    "                                      model,\n",
-    "                                    **kwargs)\n",
-    "        return pricing_results\n",
-    "\n",
-    "from rivapy.tools.interfaces import FactoryObject\n",
-    "\n",
-    "def compute_pnl_figures(pricing_results):\n",
-    "    pnl = pricing_results.hedge_model.compute_pnl(pricing_results.paths, pricing_results.payoff)\n",
-    "    return {'mean': pnl.mean(), 'var': pnl.var(), '1%':np.percentile(pnl,1), '99%': np.percentile(pnl,1)}\n",
-    "\n",
-    "def compute_pnl(pricing_results):\n",
-    "    return pricing_results.hedge_model.compute_pnl(pricing_results.paths, pricing_results.payoff)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-22T12:10:23.944147Z",
@@ -243,69 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:Function `_wrapped_model` contains input name(s) Power_Germany_FWD0, Onshore_FWD0, Offshore_FWD0 with unsupported characters which will be renamed to power_germany_fwd0, onshore_fwd0, offshore_fwd0 in the SavedModel.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: depp/delta_model\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: depp/delta_model\\assets\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pricing_results.hedge_model.save('depp')"
+    "repo = analysis.Repo('./experiments/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:No training configuration found in save file, so the model was *not* compiled. Compile it manually.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:No training configuration found in save file, so the model was *not* compiled. Compile it manually.\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = DeepHedgeModel.load('depp')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-22T12:56:49.405367Z",
@@ -318,7 +215,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/doeltz/doeltz/development/RiVaPy/rivapy/tools/datetime_grid.py:24: FutureWarning: Argument `closed` is deprecated in favor of `inclusive`.\n",
+      "C:\\Users\\doeltz\\development\\RiVaPy\\sandbox\\green_ppa\\../..\\rivapy\\tools\\datetime_grid.py:24: FutureWarning: Argument `closed` is deprecated in favor of `inclusive`.\n",
       "  self.dates = pd.date_range(start, end, freq=freq, tz=tz, closed=closed).to_pydatetime()\n"
      ]
     },
@@ -326,86 +223,127 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20\n",
-      "1000/1000 [==============================] - 7s 2ms/step - loss: 1.0018e-04\n",
-      "Epoch 2/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.8207e-05\n",
-      "Epoch 3/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.9591e-05\n",
-      "Epoch 4/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.8396e-05\n",
-      "Epoch 5/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.7541e-05\n",
-      "Epoch 6/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.6689e-05\n",
-      "Epoch 7/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.5947e-05\n",
-      "Epoch 8/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.6003e-05\n",
-      "Epoch 9/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.4701e-05\n",
-      "Epoch 10/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.4335e-05\n",
-      "Epoch 11/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.4303e-05\n",
-      "Epoch 12/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.3094e-05\n",
-      "Epoch 13/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.3400e-05\n",
-      "Epoch 14/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.3353e-05\n",
-      "Epoch 15/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.3494e-05A: 0s \n",
-      "Epoch 16/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.3430e-05\n",
-      "Epoch 17/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.2063e-05\n",
-      "Epoch 18/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.2050e-05\n",
-      "Epoch 19/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.2099e-05\n",
-      "Epoch 20/20\n",
-      "1000/1000 [==============================] - 2s 2ms/step - loss: 7.2132e-05\n"
+      "Epoch 1/6\n",
+      "90/90 [==============================] - 20s 12ms/step - loss: 0.0011\n",
+      "Epoch 2/6\n",
+      "90/90 [==============================] - 1s 15ms/step - loss: 1.3679e-04\n",
+      "Epoch 3/6\n",
+      "90/90 [==============================] - 1s 11ms/step - loss: 1.1120e-04\n",
+      "Epoch 4/6\n",
+      "90/90 [==============================] - 1s 11ms/step - loss: 9.6244e-05\n",
+      "Epoch 5/6\n",
+      "90/90 [==============================] - 8s 89ms/step - loss: 8.7525e-05 - val_loss: 8.6494e-05\n",
+      "Epoch 6/6\n",
+      "90/90 [==============================] - 1s 12ms/step - loss: 8.5035e-05\n",
+      "313/313 [==============================] - 9s 5ms/step\n",
+      "WARNING:tensorflow:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
+      "WARNING:absl:Function `_wrapped_model` contains input name(s) Power_Germany_FWD0, Onshore_FWD0, Offshore_FWD0 with unsupported characters which will be renamed to power_germany_fwd0, onshore_fwd0, offshore_fwd0 in the SavedModel.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ./experiments//e2d3e4916efb59be52144f9350e348171328d71a//delta_model\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ./experiments//e2d3e4916efb59be52144f9350e348171328d71a//delta_model\\assets\n"
      ]
     }
    ],
    "source": [
-    "pricing_results = run_hedge_experiment(val_date, \n",
-    "                                      spec, \n",
-    "                                      model, \n",
-    "                                        initial_forecasts={'Onshore': [0.8, 0.7,0.6,0.5],\n",
-    "                                                            'Offshore': [0.6,0.6,0.6,0.6]},\n",
-    "                                       power_fwd_prices=[1.0],\n",
-    "                                        forecast_hours=[10, 14, 18],\n",
-    "                                        additional_states=['Offshore'],\n",
-    "                                          depth=3, nb_neurons=32, n_sims=100_000, \n",
-    "                                        regularization=0.0,\n",
-    "                                          epochs=20, verbose=1,\n",
-    "                                        tensorboard_logdir = 'logs/' + dt.datetime.now().strftime(\"%Y%m%dT%H%M%S\"), \n",
-    "                                        initial_lr=5e-4,\n",
-    "                                        decay_steps=8_000,\n",
-    "                                          batch_size=100, decay_rate=0.8, seed=42)"
+    "pricing_results = repo.run(val_date, \n",
+    "                           spec, model, \n",
+    "                           initial_forecasts={'Onshore': [0.8],\n",
+    "                                        'Offshore': [0.6]},\n",
+    "                           power_fwd_prices=[1.0],\n",
+    "                           forecast_hours=[10, 14, 18],\n",
+    "                           additional_states=['Offshore'],\n",
+    "                           depth=3, \n",
+    "                           nb_neurons=32, \n",
+    "                           n_sims=10_000, \n",
+    "                           regularization=0.0,\n",
+    "                           epochs=6, verbose=1,\n",
+    "                           tensorboard_logdir = 'logs/' + dt.datetime.now().strftime(\"%Y%m%dT%H%M%S\"), \n",
+    "                           initial_lr=5e-4,\n",
+    "                           decay_steps=8_000,\n",
+    "                           batch_size=100, decay_rate=0.8, seed=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ref_results_key = 'e2d3e4916efb59be52144f9350e348171328d71a'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "GreenPPASpecification.__init__() got an unexpected keyword argument 'ppa_spec'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [38], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m spec \u001b[38;5;241m=\u001b[39m \u001b[43mGreenPPASpecification\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_dict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrepo\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresults\u001b[49m\u001b[43m[\u001b[49m\u001b[43mref_results_key\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\development\\RiVaPy\\sandbox\\green_ppa\\../..\\rivapy\\tools\\interfaces.py:63\u001b[0m, in \u001b[0;36mFactoryObject.from_dict\u001b[1;34m(cls, data)\u001b[0m\n\u001b[0;32m     61\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[0;32m     62\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfrom_dict\u001b[39m(\u001b[38;5;28mcls\u001b[39m, data: \u001b[38;5;28mdict\u001b[39m)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m\u001b[38;5;28mobject\u001b[39m:\n\u001b[1;32m---> 63\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mcls\u001b[39m(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m{k:v \u001b[38;5;28;01mfor\u001b[39;00m k,v \u001b[38;5;129;01min\u001b[39;00m data\u001b[38;5;241m.\u001b[39mitems() \u001b[38;5;28;01mif\u001b[39;00m k \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcls\u001b[39m\u001b[38;5;124m'\u001b[39m})\n",
+      "\u001b[1;31mTypeError\u001b[0m: GreenPPASpecification.__init__() got an unexpected keyword argument 'ppa_spec'"
+     ]
+    }
+   ],
+   "source": [
+    "spec = GreenPPASpecification.from_dict(repo.results[ref_results_key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['Power_Germany_FWD0', 'Onshore_FWD0', 'Offshore_FWD0'])"
+       "<rivapy.models.residual_demand_fwd_model.LinearDemandForwardModel at 0x23e25a13910>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pricing_results.paths.keys()\n",
-    "#ttm"
+    "LinearDemandForwardModel.from_dict(pricing_results['model'])"
    ]
   },
   {
@@ -639,7 +577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   },
   "toc": {
    "base_numbering": 1,
